--- a/app/src/main/res/layout/activity_signature_upload.xml
+++ b/app/src/main/res/layout/activity_signature_upload.xml
@@ -4,18 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignatureUpload"
-    android:background="@drawable/report_input_background">
+    tools:context=".SignatureUpload">
 
     <include
         android:id="@+id/common_logo_section"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         layout="@layout/common_logo"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_below="@+id/common_logo_section">
 
         <LinearLayout
@@ -27,7 +28,6 @@
                 android:id="@+id/report_image_upload_user_signature_img_section"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:layout_below="@+id/report_image_upload_user_img_section">
 
                 <TextView
@@ -40,40 +40,43 @@
                     android:textStyle="bold"
                     android:gravity="center"/>
 
-                <RelativeLayout
+                <LinearLayout
                     android:id="@+id/report_image_upload_usr_sign_up_section"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="vertical"
                     android:gravity="center"
                     android:layout_below="@+id/report_image_upload_usr_sign_img_text">
 
-                    <RelativeLayout
+                    <LinearLayout
                         android:id="@+id/report_image_upload_select_camera_usr_sign_btn_sec"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="10dp"
+                        android:padding="4dp"
                         android:gravity="center">
 
                         <Button
                             android:id="@+id/report_image_upload_select_camera_usr_sign"
-                            android:layout_width="150dp"
-                            android:layout_height="wrap_content"
+                            android:layout_width="200dp"
+                            android:layout_height="40dp"
                             android:onClick="cameraBtnHandlerForSignature"
                             android:text="Open Camera"
+                            android:textStyle="bold"
+                            android:textColor="@color/WHITE"
                             android:paddingLeft="20dp"
                             android:paddingRight="20dp"
                             android:textAllCaps="false"
                             android:background="@drawable/ripple_transparent_background"/>
 
-                    </RelativeLayout>
+                    </LinearLayout>
 
-                    <RelativeLayout
+                    <LinearLayout
                         android:id="@+id/report_image_upload_select_camera_usr_sign_img_sec"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
                         android:gravity="center"
-                        android:background="@drawable/demo_img_background"
+                        android:background="@drawable/et_custom"
                         android:layout_below="@+id/report_image_upload_select_camera_usr_sign_btn_sec">
 
                         <ImageView
@@ -84,31 +87,33 @@
                             android:layout_marginTop="10dp"
                             app:srcCompat="@drawable/demo_img_background"/>
 
-                    </RelativeLayout>
+                    </LinearLayout>
 
-                    <RelativeLayout
-                        android:id="@+id/report_image_upload_select_camera_usr_sign_submit_sec"
+                    <LinearLayout
+                        android:id="@+id/report_sign_upload_select_camera_usr_sign_submit_sec"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="10dp"
+                        android:orientation="vertical"
+                        android:layout_marginTop="30dp"
                         android:gravity="center"
                         android:layout_below="@+id/report_image_upload_select_camera_usr_sign_img_sec">
 
                         <Button
-                            android:id="@+id/report_image_upload_usr_sign_submit"
-                            android:layout_width="150dp"
+                            android:id="@+id/report_sign_upload_usr_sign_submit"
+                            android:layout_width="250dp"
                             android:layout_height="wrap_content"
                             android:onClick="uploadSignatureToServer"
-                            android:text="Submit Report"
+                            android:text="Upload signature"
+                            android:textStyle="bold"
+                            android:textColor="@color/WHITE"
                             android:paddingLeft="20dp"
                             android:paddingRight="20dp"
                             android:textAllCaps="false"
-                            android:layout_marginTop="10dp"
                             android:background="@drawable/ripple_transparent_background"/>
 
-                    </RelativeLayout>
+                    </LinearLayout>
 
-                </RelativeLayout>
+                </LinearLayout>
 
             </RelativeLayout>
 
