--- a/app/src/main/res/layout/activity_submit_report.xml
+++ b/app/src/main/res/layout/activity_submit_report.xml
@@ -22,8 +22,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="10dp">
 
+            <!--Report Header-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -42,27 +44,412 @@
                     android:background="@drawable/bottom_border"/>
             </LinearLayout>
 
+            <!--Report Details-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_marginTop="10dp">
 
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:text="Name"
-                    android:textSize="18dp"
-                    android:textColor="@color/BLACK"/>
-
-                <TextView
+                <!--Report Id-->
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="F R Summit"
-                    android:textSize="18dp"
-                    android:textColor="@color/BLACK"/>
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Report Id"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="1001"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Delivery Partner Id-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Delivery Partner Id"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="2014200000071"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Customer Name-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Customer Name"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Shahed Khan"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Customer Name Override-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Customer Name Override"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Shahed Khan K"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Order Number-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Order Number"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="O-202"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Order Number Override-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Order Number Override"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="O-2020"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Order By-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Order By"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Summit"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Order By Override-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Order By Override"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="F R Summit"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Order Date-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Order Date"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="20-10-2020"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Order Date Override-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Order Date Override"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="20-10-2020"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Delivery Date-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Delivery Date"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="26-10-2020"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Delivery Date Override-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Delivery Date Override"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="25-10-2020"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Delivery To Name-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Delivery To Name"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Babu"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Delivery To Name Override-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Delivery To Name Override"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Babu Khan"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Status-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Status"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Delivered"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Comment-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Comment"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="No comment"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Image URL-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Image URL"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="www.amarshasroy.com"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
+                <!--Report Signature URL-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Signature URL"
+                        android:textSize="18dp"
+                        android:textColor="@color/shasroy_color"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="www.amarshasroy.com"
+                        android:textSize="18dp"
+                        android:textColor="@color/BLACK"/>
+                </LinearLayout>
+
             </LinearLayout>
 
+            <!--Report Submission-->
             <LinearLayout
                 android:id="@+id/report_submit_sec"
                 android:layout_width="match_parent"
